tests/fixtures/valid/docs_let_binding.lby
fn main -> i64
    let value i64 = 40
    value + 2
