tests/fixtures/invalid/unsupported_module.lby
module demo

fn main -> i64
    1
